--- a/views/index.njk
+++ b/views/index.njk
@@ -8,7 +8,7 @@
       </hgroup>
       <form class="form">
         <textarea class="form-control" id="texto" rows="3"></textarea>
-        <button class="button" type="button" onclick="myFunction()">Cadastrar</button>
+        <button id="form-button" class="button" type="button" onclick="getComments()">Cadastrar</button>
       </form>
     </section>
     <div class="line"></div>
@@ -19,7 +19,7 @@
       <ul id="list">
         {% for comment in item -%}
         <li>
-          <p>{{ comment.text }}</p>
+          <p>{{ comment.title }}</p>
           <button class="button" type="button">Ouvir</button>
         </li> 
         {%- endfor %}
