--- a/views/layout.njk
+++ b/views/layout.njk
@@ -1,29 +1,63 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="script.js"></script>
-    <link rel="stylesheet" href="styles.css">
-    <meta charset="utf-8">
-</head>
+    <head>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="script.js"></script>
+        <link rel="stylesheet" href="styles.css">
+        <meta charset="utf-8">
+    </head>
 
-<body>
-    {% block content %} {% endblock %}
-    <script>
-        $('#form-button').click(function() {
-        var text = $('.form-control').val();
-        $.ajax
-        ({ 
-            url: '/create/comment',
-            data: {"title": text},
-            type: 'post',
-            success: function(result)
-          {
-               alert("deu bom carai");
-           }
-        });
-});
-</script>
-</body>
+    <body>
+        {% block content %}{% endblock %}
+        <script>
+            $('#form-button').click(function () {
+                $('#form-button').attr('disabled', true);
+                var text = $('.form-control').val();
+                $.ajax({
+                    url: '/create/comment',
+                    data: {
+                        "title": text
+                    },
+                    type: 'post',
+                    success: function (result) {
+                        $('#form-button').attr('disabled', false);
+                        location.reload();
+                    },
+                    error: function (XMLHttpRequest, textStatus, errorThrown) {
+                        $('#form-button').attr('disabled', false);
+                        if (errorThrown.toLowerCase() === 'bad request') {
+                            alert("Insira um texto válido");
+                        }
+                    }
+                });
+            });
+            //           $.ajax({
+            //           url: 'get.php',
+            //           data: { attr1: 'value1' },
+            //           success: function( data ) {
+            //               console.log(data);
+            //               $('audio #source').attr('src', data);
+            //               $('audio').get(0).load();
+            //               $('audio').get(0).play();
+            //           }
+            //       });
+
+            $('.listener').click(function (event) {
+                var li = $(event.target).parent('li');
+                var p = li.children().get(0).innerHTML;
+                var fileName = p.replace(/\s+/g, '_')
+                var audioId = li.children().get(2).id;
+                console.log(li.children().get(2).id)
+
+                $(`#${audioId} #source`).attr('src', `http://localhost:8080/audio/${fileName}.wav`);
+                $(`#${audioId}`)
+                    .get(0)
+                    .load();
+                $(`#${audioId}`)
+                    .get(0)
+                    .play();
+            });
+        </script>
+    </body>
 </html>
